infrastructure/policies/restrict-rbac-rules-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-rbac-rules
  labels:
    app.kubernetes.io/part-of: policies
spec:
  policyName: restrict-rbac-rules
  validationActions: [Deny]
