infrastructure/policies/restrict-tunnel-hostname-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-tunnel-hostname
  labels:
    app.kubernetes.io/part-of: policies
spec:
  policyName: restrict-tunnel-hostname
  validationActions: [Deny, Audit]
